# car

./: CMakeLists.txt
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/components/: dashboard.cpp  dashboard.h  menu.cpp  menu.h  setting.cpp  setting.h
src/resources/: resources.qrc
src/resources/styles/: dashboard.css  dashboard.qss  menu.qss  style.css  style.qss
